fixed circ-shifting bug, added default noise words

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,8 +9,18 @@
 
 .inline-div {
   display: inline-block;
-  width: 500px;
+  width: 600px;
   height: 600px;
+}
+
+.noise-text {
+  width: 600px;
+  height: 50px;
+}
+
+.noise-box {
+  padding-bottom: 60px;
+  padding-left: 20px;
 }
 
 textarea {
@@ -27,7 +37,7 @@ textarea {
 }
 
 .input-submit-button {
-  width: 400px;
+  width: 300px;
   height: 600px;
   float: right;
 }
@@ -43,8 +53,4 @@ textarea {
 
 .btn-primary {
   font-size: 30px;
-}
-
-.btn-group-toggle {
-  color: blueviolet;
 }
